--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Samaya from "../assets/samaya.jpg";
       </p>
       <p class="mb-4 text-lg md:text-xl">
         In addition to my private practice, I am also part of <a
-          href="https://wellness-staging.netlify.app/"
+          href="https://www.mariamitchelllac.com/"
           class="text-[#bf7644] hover:text-orange-800"
         >
           Wellness Medical Center</a
