--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,12 +29,12 @@ import Samaya from "../assets/samaya.jpg";
   </div>
 
   <div
-    class="max-w-7xl mx-auto pb-6 md:mt-6 grid grid-col-1 xl:grid-cols-12 gap-6 md:text-left px-6"
+    class="max-w-7xl mx-auto pb-6 md:mt-6 grid grid-cols-1 xl:grid-cols-12 gap-6 md:text-left px-6"
   >
     <div class="xl:col-span-4 grid mt-6">
       <Image
         src={Samaya}
-        alt="Samaya Cullerton"
+        alt="Samaya Cullerton portrait"
         class="w-64 h-64 lg:w-96 lg:h-96 rounded-full justify-self-center"
         width={384}
         height={384}
