--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,15 +61,12 @@ import Button from "../components/Button.astro";
       <div
         class="mt-6 flex flex-col md:flex-row items-center justify-between w-full gap-4"
       >
-        <button
-          class="bg-brand-accent text-text-light font-semibold text-lg px-6 py-3 rounded-xl shadow-lg cursor-pointer hover:bg-brand-dark transition
-  focus:ring-2 focus:ring-[#cc926a] focus:outline-none md:w-64 w-full"
-          data-cal-link="mattosurf/1-hour-session"
-          data-cal-namespace="1-hour-session"
-          data-cal-config='{"layout":"month_view","theme":"light"}'
-        >
-          Schedule a Session
-        </button>
+        <iframe
+          frameborder="0"
+          height="28"
+          scrolling="no"
+          src="https://wmc.janeapp.com/embed/book_online"
+          width="177"></iframe>
         <img
           src="/AllianceLogo.svg"
           alt="Central California Alliance for Health Insurance logo"
