new book buttons

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -15,6 +15,7 @@ import celluma from "../assets/celluma.jpg";
 import red from "../assets/red.jpg";
 import ButtonFixed from "../components/ButtonFixed.astro";
 import Testimonials from "../components/Testimonials.astro";
+import Book2 from "../components/Book2.astro";
 ---
 
 <Layout title="Services">
@@ -143,7 +144,10 @@ import Testimonials from "../components/Testimonials.astro";
   </section>
 
   <Testimonials />
-  <ButtonFixed />
+  <!-- <ButtonFixed /> -->
+  <div class="flex justify-center items-center mt-4">
+    <Book2 />
+  </div>
 
   <!-- Scroll-triggered animation script -->
   <script is:inline>
